--- a/client/src/app/chats/chats.page.scss
+++ b/client/src/app/chats/chats.page.scss
@@ -1,41 +1,36 @@
-ion-header {
-    ion-toolbar {
-        ion-title {
-            padding: 0 30px !important;
-            text-align: center !important;
-            font-size: 1.35rem !important;
-        }
-    }
+.img_box {
+    --width: 50px;
+    width: var(--width);
+    height: var(--width);
+    min-width: var(--width);
+    min-height: var(--width);
+    border-radius: 50px;
 }
 
 
+.system-message {
+    color: var(--ion-color-secondary) !important;
+    display: flex;
+    align-items: center;
+
+    ion-icon {
+        margin-right: 6px;
+        font-size: 16px;
+        color: var(--ion-color-secondary) !important;
+    }
+}
+
+.text_box {
+    width: calc(100% - 48px);
+}
+
 ion-list {
-    background: none;
-    width: calc(100% - 0px);
-    margin: 0 auto;
-    padding-top: 10px;
-    padding-bottom: 63px;
+    height: 100%;
 
     ion-item {
-        padding: 0;
-        --inner-padding-end: 0px;
-        --inner-min-height: unset !important;
-        --padding-start: 0;
-        --background: var(--transparent) !important;
-        width: calc(100% - 27px);
-        --min-height: unset;
-        margin: 0 auto;
         margin-bottom: 11px;
-        background: var(--item-bg);
-        border-radius: 7px;
 
         .item-inner {
-
-            .img_box {
-                min-width: 68px;
-                height: 68px;
-            }
-
             .text_box {
                 width: 100%;
                 overflow: hidden;
@@ -46,7 +41,7 @@ ion-list {
                     color: var(--white);
                     font-size: 1.11rem;
                     letter-spacing: 0.3px;
-                   padding-bottom: 6px;
+                    padding-bottom: 6px;
 
                     .item-title {
                         white-space: nowrap;
@@ -72,70 +67,6 @@ ion-list {
                     overflow: hidden;
                     white-space: nowrap;
                 }
-            }
-        }
-
-        &.animate__animated.animate__fadeInUp {
-            --animate-duration: .0s;
-
-            &:nth-child(1) {
-                --animate-duration: .15s;
-            }
-
-            &:nth-child(2) {
-                --animate-duration: .2s;
-            }
-
-            &:nth-child(3) {
-                --animate-duration: .25s;
-            }
-
-            &:nth-child(4) {
-                --animate-duration: .3s;
-            }
-
-            &:nth-child(5) {
-                --animate-duration: .35s;
-            }
-
-            &:nth-child(6) {
-                --animate-duration: .4s;
-            }
-
-            &:nth-child(7) {
-                --animate-duration: .45s;
-            }
-
-            &:nth-child(8) {
-                --animate-duration: .5s;
-            }
-
-            &:nth-child(9) {
-                --animate-duration: .55s;
-            }
-
-            &:nth-child(10) {
-                --animate-duration: .6s;
-            }
-
-            &:nth-child(11) {
-                --animate-duration: .65s;
-            }
-
-            &:nth-child(12) {
-                --animate-duration: .7s;
-            }
-
-            &:nth-child(13) {
-                --animate-duration: .5s;
-            }
-
-            &:nth-child(14) {
-                --animate-duration: .5s;
-            }
-
-            &:nth-child(15) {
-                --animate-duration: .5s;
             }
         }
     }
