--- a/client/src/app/forgot-password/forgot-password.page.html
+++ b/client/src/app/forgot-password/forgot-password.page.html
@@ -21,8 +21,8 @@
     </div>
 
     <div class="form">
-        <ion-list lines="none">
-            <ion-item lines="none" class="animate__animated animate__fadeInUp">
+        <ion-list>
+            <ion-item class="animate__animated animate__fadeInUp">
                 <ion-input [(ngModel)]="email" labelPlacement="floating" [label]="'email' | translate" mode="md"
                     type="email"></ion-input>
             </ion-item>
