--- a/client/src/app/settings/my-profile/my-profile.page.scss
+++ b/client/src/app/settings/my-profile/my-profile.page.scss
@@ -8,3 +8,9 @@ ion-header {
 ion-header {
     --ion-text-color: white
 }
+
+.select-option-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
