--- a/client/src/app/tabs/tabs.page.html
+++ b/client/src/app/tabs/tabs.page.html
@@ -8,17 +8,17 @@
 
         <ion-tab-button tab="my_activity">
             <ion-icon class="zmdi zmdi-equalizer"></ion-icon>
-            <ion-label>{{'my_activity' | translate}}</ion-label>
+            <ion-label>{{'activity' | translate}}</ion-label>
         </ion-tab-button>
 
         <ion-tab-button tab="chats">
             <ion-icon class="zmdi zmdi-comments"></ion-icon>
-            <ion-label>{{'message' | translate}}</ion-label>
+            <ion-label>{{'chat' | translate}}</ion-label>
         </ion-tab-button>
 
-        <ion-tab-button tab="account">
-            <ion-icon class="zmdi zmdi-account"></ion-icon>
-            <ion-label>{{'account' | translate}}</ion-label>
+        <ion-tab-button tab="settings">
+            <ion-icon class="zmdi zmdi-settings"></ion-icon>
+            <ion-label>{{'settings' | translate}}</ion-label>
         </ion-tab-button>
     </ion-tab-bar>
 
