--- a/client/src/app/day-actions-popover/day-actions-popover.component.html
+++ b/client/src/app/day-actions-popover/day-actions-popover.component.html
@@ -7,7 +7,7 @@
         <ion-icon name="chevron-down-outline" slot="start"></ion-icon>
         <ion-label>{{ 'move_down' | translate }}</ion-label>
     </ion-item>
-    <ion-item button (click)="removeHandler()">
+    <ion-item button (click)="removeHandler()" [disabled]="!canDelete">
         <ion-icon color="danger" name="trash-outline" slot="start"></ion-icon>
         <ion-label color="danger">{{ 'remove' | translate }}</ion-label>
     </ion-item>
