--- a/client/src/app/register/register.page.scss
+++ b/client/src/app/register/register.page.scss
@@ -17,17 +17,73 @@ ion-radio-group {
     }
 }
 
-.banner .logo {
-    position: absolute;
-    bottom: 59px;
-    left: 0;
-    width: 100%;
-    padding: 0 30px;
-    --animate-duration: .3s;
+
+.banner {
+    .logo {
+        position: absolute;
+        bottom: 59px;
+        left: 0;
+        width: 100%;
+        padding: 0 30px;
+        --animate-duration: .3s;
+    }
+
+    .banner_img {
+        height: 200px;
+    }
 }
 
 ion-header,
 .banner {
     --ion-text-color: white;
     color: var(--ion-text-color);
+}
+
+
+
+
+.user-type-selector {
+    margin: 16px 0;
+}
+
+.custom-segment {
+    --background: var(--ion-color-light);
+    padding: 0px !important;
+    overflow: hidden;
+}
+
+ion-segment-button {
+    height: 35px;
+    margin: 0px !important;
+    --background: transparent;
+    --background-checked: var(--ion-color-primary);
+    --color: var(--ion-color-medium);
+    --color-checked: white;
+    --indicator-color: transparent;
+    min-height: 48px;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-transform: none;
+    transition: all 0.3s ease;
+}
+
+.segment-button-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.segment-button-content ion-icon {
+    font-size: 18px;
+    margin-right: 8px;
+}
+
+.type-description {
+    margin-top: 12px;
+    padding: 0 4px;
+    color: var(--ion-color-medium);
+    font-size: 14px;
 }
