--- a/client/src/scss/theme/variables.scss
+++ b/client/src/scss/theme/variables.scss
@@ -110,10 +110,14 @@
     --ion-item-background: #ffffff;
     --ion-toolbar-background: #f8f8f8;
     --ion-tab-bar-background: #f8f8f8;
-    --ion-card-background: #ffffff;
+    // --ion-card-background: #ffffff;
+    --ion-card-background: var(--ion-color-light);
 
     --ion-toolbar-background: var(--ion-background-color-step-50); // IOS: rgba(var(--ion-text-color-rgb, 0, 0, 0), 0.065);
     --ion-item-border-color: var(--ion-background-color-step-100);
+
+    --ion-card-color: var(--ion-text-color);
+    --ion-item-background: var(--ion-background-color);
 }
 
 [data-theme='dark'] {
@@ -227,5 +231,6 @@
     --ion-item-background: #1e1e1e;
     --ion-toolbar-background: #1f1f1f;
     --ion-tab-bar-background: #1f1f1f;
-    --ion-card-background: #1e1e1e;
+    // --ion-card-background: #1e1e1e;
+    --ion-card-background: var(--ion-color-light);
 }
